Counitng Sort Solved

--- a/Python/ Finding the percentage.ipynb
+++ b/Python/ Finding the percentage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -11,7 +11,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "3\n",
+      "Krishna 67 68 69\n",
+      "Arjun 70 98 63\n",
+      "Malika 52 56 60\n",
+      "Malika\n",
+      "56.00\n"
      ]
     }
    ],
